kubernetes/deployment.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "eshop-core"
  namespace: "default"
  labels:
    app: "eshop-core"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      app: "eshop-core"
  template:
    metadata:
      labels:
        app: "eshop-core"
    spec:
      containers:
      - name: "eshop-core"
        image: "eshop-core-{ENVIRONMENT}:{COMMIT_SHA}"
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
