kubernetes/ingress.yaml
# NODE PORTS

---
apiVersion: v1
kind: Service
metadata:
  name: core-np
  labels:
    app: eshop-core
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: core-port
  selector:
    app: eshop-core
---

# INGRESS

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eshop-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: core-np
          servicePort: core-port
---
